src/main/java/umg/edu/antlr/plsql/PLSQLParser.java
// Generated from C:/Code/Projects/Java/CompiladorMultilenguaje/src/main/java/umg/edu/antlr/plsql/PLSQLParser.g4 by ANTLR 4.13.2
package umg.edu.antlr.plsql;

    import java.util.*;
    import umg.edu.symboltable.*;
    import umg.edu.error.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PLSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECLARE=1, BEGIN=2, END=3, EXCEPTION=4, IF=5, THEN=6, ELSE=7, ELSIF=8, 
		CASE=9, WHEN=10, WHILE=11, FOR=12, LOOP=13, EXIT=14, CONTINUE=15, GOTO=16, 
		SELECT=17, INSERT=18, UPDATE=19, DELETE=20, FROM=21, WHERE=22, INTO=23, 
		VALUES=24, SET=25, CREATE=26, ALTER=27, DROP=28, TABLE=29, INDEX=30, VIEW=31, 
		SEQUENCE=32, TRIGGER=33, PROCEDURE=34, FUNCTION=35, PACKAGE=36, BODY=37, 
		TYPE=38, CURSOR=39, RECORD=40, VARRAY=41, RETURN=42, RETURNS=43, CONSTANT=44, 
		DEFAULT=45, NOT_NULL=46, IN=47, OUT=48, IN_OUT=49, OR=50, ON=51, REPLACE=52, 
		AS=53, IS=54, OTHERS=55, REVERSE=56, DOTDOT=57, MULT=58, BEFORE=59, AFTER=60, 
		INSTEAD=61, OF=62, EACH=63, ROW=64, START=65, WITH=66, INCREMENT=67, BY=68, 
		MAXVALUE=69, MINVALUE=70, CYCLE=71, NOCYCLE=72, CACHE=73, NOCACHE=74, 
		VARCHAR2=75, VARCHAR=76, CHAR=77, NUMBER=78, INTEGER=79, DATE=80, TIMESTAMP=81, 
		BOOLEAN=82, BLOB=83, CLOB=84, ROWTYPE=85, TYPE_ATTR=86, TRUE=87, FALSE=88, 
		NULL=89, AND=90, NOT=91, BETWEEN=92, LIKE=93, EXISTS=94, ASSIGN=95, ARROW=96, 
		CONCAT=97, PLUS=98, MINUS=99, DIV=100, POWER=101, EQ=102, NE=103, LT=104, 
		LE=105, GT=106, GE=107, SEMICOLON=108, COMMA=109, DOT=110, COLON=111, 
		LPAREN=112, RPAREN=113, LBRACKET=114, RBRACKET=115, PERCENT=116, AT=117, 
		DOLLAR=118, NUMBER_LITERAL=119, STRING_LITERAL=120, QUOTED_IDENTIFIER=121, 
		IDENTIFIER=122, HOST_VARIABLE=123, LINE_COMMENT=124, BLOCK_COMMENT=125, 
		SQLPLUS_COMMAND=126, WS=127;
	public static final int
		RULE_plsqlUnit = 0, RULE_anonymousBlock = 1, RULE_createStatement = 2, 
		RULE_dropStatement = 3, RULE_objectType = 4, RULE_createTable = 5, RULE_columnDefinition = 6, 
		RULE_createProcedure = 7, RULE_createFunction = 8, RULE_createPackage = 9, 
		RULE_packageSpec = 10, RULE_packageBody = 11, RULE_procedureDeclaration = 12, 
		RULE_functionDeclaration = 13, RULE_procedureImplementation = 14, RULE_functionImplementation = 15, 
		RULE_parameterList = 16, RULE_parameter = 17, RULE_declarationSection = 18, 
		RULE_variableDeclaration = 19, RULE_constantDeclaration = 20, RULE_cursorDeclaration = 21, 
		RULE_typeDeclaration = 22, RULE_recordType = 23, RULE_recordField = 24, 
		RULE_dataType = 25, RULE_executableSection = 26, RULE_exceptionSection = 27, 
		RULE_whenClause = 28, RULE_exceptionName = 29, RULE_statement = 30, RULE_assignmentStatement = 31, 
		RULE_variable = 32, RULE_plsqlStatement = 33, RULE_procedureCall = 34, 
		RULE_argumentList = 35, RULE_controlStatement = 36, RULE_ifStatement = 37, 
		RULE_caseStatement = 38, RULE_loopStatement = 39, RULE_forStatement = 40, 
		RULE_whileStatement = 41, RULE_cursorName = 42, RULE_sqlStatement = 43, 
		RULE_selectStatement = 44, RULE_selectList = 45, RULE_tableReference = 46, 
		RULE_whereClause = 47, RULE_insertStatement = 48, RULE_columnList = 49, 
		RULE_valueList = 50, RULE_updateStatement = 51, RULE_assignmentList = 52, 
		RULE_columnAssignment = 53, RULE_deleteStatement = 54, RULE_createIndex = 55, 
		RULE_createView = 56, RULE_createSequence = 57, RULE_sequenceOption = 58, 
		RULE_createTrigger = 59, RULE_triggerEvent = 60, RULE_expression = 61, 
		RULE_conditionalExpression = 62, RULE_logicalOrExpression = 63, RULE_logicalAndExpression = 64, 
		RULE_relationalExpression = 65, RULE_relationalOperator = 66, RULE_additiveExpression = 67, 
		RULE_multiplicativeExpression = 68, RULE_unaryExpression = 69, RULE_primaryExpression = 70, 
		RULE_functionCall = 71, RULE_literal = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"plsqlUnit", "anonymousBlock", "createStatement", "dropStatement", "objectType", 
			"createTable", "columnDefinition", "createProcedure", "createFunction", 
			"createPackage", "packageSpec", "packageBody", "procedureDeclaration", 
			"functionDeclaration", "procedureImplementation", "functionImplementation", 
			"parameterList", "parameter", "declarationSection", "variableDeclaration", 
			"constantDeclaration", "cursorDeclaration", "typeDeclaration", "recordType", 
			"recordField", "dataType", "executableSection", "exceptionSection", "whenClause", 
			"exceptionName", "statement", "assignmentStatement", "variable", "plsqlStatement", 
			"procedureCall", "argumentList", "controlStatement", "ifStatement", "caseStatement", 
			"loopStatement", "forStatement", "whileStatement", "cursorName", "sqlStatement", 
			"selectStatement", "selectList", "tableReference", "whereClause", "insertStatement", 
			"columnList", "valueList", "updateStatement", "assignmentList", "columnAssignment", 
			"deleteStatement", "createIndex", "createView", "createSequence", "sequenceOption", 
			"createTrigger", "triggerEvent", "expression", "conditionalExpression", 
			"logicalOrExpression", "logicalAndExpression", "relationalExpression", 
			"relationalOperator", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "primaryExpression", "functionCall", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'..'", "'*'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"':='", "'=>'", "'||'", "'+'", "'-'", "'/'", "'**'", "'='", null, "'<'", 
			"'<='", "'>'", "'>='", "';'", "','", "'.'", "':'", "'('", "')'", "'['", 
			"']'", "'%'", "'@'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECLARE", "BEGIN", "END", "EXCEPTION", "IF", "THEN", "ELSE", "ELSIF", 
			"CASE", "WHEN", "WHILE", "FOR", "LOOP", "EXIT", "CONTINUE", "GOTO", "SELECT", 
			"INSERT", "UPDATE", "DELETE", "FROM", "WHERE", "INTO", "VALUES", "SET", 
			"CREATE", "ALTER", "DROP", "TABLE", "INDEX", "VIEW", "SEQUENCE", "TRIGGER", 
			"PROCEDURE", "FUNCTION", "PACKAGE", "BODY", "TYPE", "CURSOR", "RECORD", 
			"VARRAY", "RETURN", "RETURNS", "CONSTANT", "DEFAULT", "NOT_NULL", "IN", 
			"OUT", "IN_OUT", "OR", "ON", "REPLACE", "AS", "IS", "OTHERS", "REVERSE", 
			"DOTDOT", "MULT", "BEFORE", "AFTER", "INSTEAD", "OF", "EACH", "ROW", 
			"START", "WITH", "INCREMENT", "BY", "MAXVALUE", "MINVALUE", "CYCLE", 
			"NOCYCLE", "CACHE", "NOCACHE", "VARCHAR2", "VARCHAR", "CHAR", "NUMBER", 
			"INTEGER", "DATE", "TIMESTAMP", "BOOLEAN", "BLOB", "CLOB", "ROWTYPE", 
			"TYPE_ATTR", "TRUE", "FALSE", "NULL", "AND", "NOT", "BETWEEN", "LIKE", 
			"EXISTS", "ASSIGN", "ARROW", "CONCAT", "PLUS", "MINUS", "DIV", "POWER", 
			"EQ", "NE", "LT", "LE", "GT", "GE", "SEMICOLON", "COMMA", "DOT", "COLON", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "PERCENT", "AT", "DOLLAR", 
			"NUMBER_LITERAL", "STRING_LITERAL", "QUOTED_IDENTIFIER", "IDENTIFIER", 
			"HOST_VARIABLE", "LINE_COMMENT", "BLOCK_COMMENT", "SQLPLUS_COMMAND", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PLSQLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private SymbolTable symbolTable = new SymbolTable();
	    private ErrorTable errorTable = new ErrorTable();
	    private Set<String> declaredTables = new HashSet<>();
	    private Set<String> declaredVariables = new HashSet<>();
	    
	    public SymbolTable getSymbolTable() { return symbolTable; }
	    public ErrorTable getErrorTable() { return errorTable; }
	    
	    private void addSymbol(String name, String type, int line, int column) {
	        Symbol symbol = new Symbol(name, type, "global", null, line, column);
	        symbolTable.addSymbol(symbol);
	    }
	    
	    private void addError(String message, int line, int column, String type) {
	        CompilationError.ErrorType errorType = CompilationError.ErrorType.SEMANTIC;
	        if ("LEXICAL".equals(type)) {
	            errorType = CompilationError.ErrorType.LEXICAL;
	        } else if ("SYNTACTIC".equals(type)) {
	            errorType = CompilationError.ErrorType.SYNTACTIC;
	        }
	        CompilationError error = new CompilationError(errorType, message, line, column, "");
	        errorTable.addError(error);
	    }
	    
	    private void checkTableExists(String tableName, int line, int column) {
	        if (!declaredTables.contains(tableName.toLowerCase())) {
	            addError("Table '" + tableName + "' does not exist", line, column, "SEMANTIC");
	        }
	    }
	    
	    private void addTable(String tableName) {
	        declaredTables.add(tableName.toLowerCase());
	    }
	    
	    private void checkVariableExists(String varName, int line, int column) {
	        if (!declaredVariables.contains(varName.toLowerCase())) {
	            addError("Variable '" + varName + "' not declared", line, column, "SEMANTIC");
	        }
	    }
	    
	    private void addVariable(String varName) {
	        declaredVariables.add(varName.toLowerCase());
	    }

	public PLSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlsqlUnitContext extends ParserRuleContext {
		public AnonymousBlockContext anonymousBlock() {
			return getRuleContext(AnonymousBlockContext.class,0);
		}
		public CreateStatementContext createStatement() {
			return getRuleContext(CreateStatementContext.class,0);
		}
		public DropStatementContext dropStatement() {
			return getRuleContext(DropStatementContext.class,0);
		}
		public SqlStatementContext sqlStatement() {
			return getRuleContext(SqlStatementContext.class,0);
		}
		public PlsqlUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plsqlUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLSQLParserListener ) ((PLSQLParserListener)listener).enterPlsqlUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLSQLParserListener ) ((PLSQLParserListener)listener).exitPlsqlUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLSQLParserVisitor ) return ((PLSQLParserVisitor<? extends T>)visitor).visitPlsqlUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlsqlUnitContext plsqlUnit() throws RecognitionException {
		PlsqlUnitContext _localctx = new PlsqlUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plsqlUnit);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECLARE:
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				anonymousBlock();
				}
				break;
			case CREATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				createStatement();
				}
				break;
			case DROP:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				dropStatement();
				}
				break;
			case SELECT:
			case INSERT:
			case UPDATE:
			case DELETE:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				sqlStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnonymousBlockContext extends ParserRuleContext {
		public ExecutableSectionContext executableSection() {
			return getRuleContext(ExecutableSectionContext.class,0);
		}
		public TerminalNode END() { return getToken(PLSQLParser.END, 0); }
		public TerminalNode DECLARE() { return getToken(PLSQLParser.DECLARE, 0); }
		public DeclarationSectionContext declarationSection() {
			return getRuleContext(DeclarationSectionContext.class,0);
		}
		public ExceptionSectionContext exceptionSection() {
			return getRuleContext(ExceptionSectionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PLSQLParser.SEMICOLON, 0); }
		public AnonymousBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anonymousBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLSQLParserListener ) ((PLSQLParserListener)listener).enterAnonymousBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLSQLParserListener ) ((PLSQLParserListener)listener).exitAnonymousBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLSQLParserVisitor ) return ((PLSQLParserVisitor<? extends T>)visitor).visitAnonymousBlock(this);
			else return visitor.visitChildren(this);
		}
	}
